@@ -1,3 +1,9 @@
+Tue Jul 29 12:28:17 HKT 2003 William Brack <wbrack@mmm.com.hk>
+
+	* HTMLparser.c: fixed problem with comments reported by Nick Kew
+	* encoding.c: added routines xmlUTF8Size and xmlUTF8Charcmp for
+	  some future cleanup of UTF8 handling
+
 Mon Jul 28 16:39:14 EDT 2003 Daniel Veillard <daniel@veillard.com>
 
 	* xpath.c: applied a change suggested by Sean Griffin in bug
